--- a/res/layout/activity_main_bottom.xml
+++ b/res/layout/activity_main_bottom.xml
@@ -25,7 +25,7 @@
     <TextView
         android:id="@+id/text3"
         android:gravity="center"
-        android:text="Cordova"
+        android:text="第三个"
         android:textSize="24sp"
         android:layout_weight="1"
         android:layout_width="0dp"
